# Korai

./: .gitignore  Makefile  README.md  compile_commands.json  meson.build
.cache/clangd/index/: args.h.1B0DE6F5063FD6CE.idx  comp.hpp.FCAC3F3B1961DD14.idx  externalFunctions.h.0B49B7FD34B874AE.idx  help.h.1EB89CCDC5CEFD0C.idx  icon.c.784A927C708DEBC4.idx  icon.xpm.22A9336A88AD646D.idx  main.cpp.7D9F0DD027BC2C75.idx  strnatcmp.hpp.FB5AA6631EA7A96D.idx  web_contents.h.36C169C96411F464.idx  zip.hpp.322B0731E2F3EFEF.idx  zipextract.hpp.48648FEA184A4FC7.idx
.github/: FUNDING.yml
.github/workflows/: makefile.yml
src/: args.h  comp.hpp  dialogs.hpp  downloader.hpp  externalFunctions.h  functions.hpp  global_variables.hpp  help.h  icon.c  icon.xpm  korai.desktop  main.cpp  main_window.hpp  signal_functions.hpp  version.h  web_contents.h  zip.hpp  zipextract.hpp
src/extensions/: pos_save.cpp
